--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<link href="/assets/css/style.css" rel="stylesheet">
+<link href="assets/css/style.css" rel="stylesheet">
 
-<script src="assets/js/card_creator.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
 
@@ -25,3 +24,5 @@ Your message here
  
   <a href="#" target="_blank"  class="cosmo"><p>🚀</p></a>
 </div>
+
+<script src="assets/js/card_creator.js"></script>
