--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
+<html lang="en" class=""><head>
 
+  <meta charset="UTF-8">
+  <title>Send A Card</title>
 
+  <meta name="robots">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/image-picker/0.3.1/image-picker.min.js"></script></head>
+
+<body class="modal-open" style="padding-right: 56px;">
+  
+<link href="assets/css/style.css" rel="stylesheet">
+
+d
 <link href="https://btn.ninja/css/addons.css" rel="stylesheet">
 
 <link href="https://btn.ninja/css/bootstrap.css" rel="stylesheet">
@@ -171,15 +182,14 @@ ul.thumbnails.image_picker_selector {
   <h1>SendACard - Card Creator</h1>
 <div class="float-half">
   <p class="label">Message For Card: </p>
-<textarea id="input">
-Your message here
+<textarea id="input">Your message here
 </textarea>
 </div>
 <div class="float-half">
   
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#imagePicker" style="width:200px; margin:5px auto;">Choose Card Image</button>
 
-<div class="modal" id="imagePicker">
+<div class="modal in" id="imagePicker" style="display: block; padding-right: 16px;">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
@@ -189,18 +199,24 @@ Your message here
 
         <div class="wall">
           
-          <select name="user[avatar]" id="images">
+          <select name="user[avatar]" id="images" style="display: none;">
   <option value="">Please Select</option>
-  <option value="1" data-img-src='https://via.placeholder.com/150
+  <option value="1" data-img-src="https://via.placeholder.com/150
 
-C/O https://placeholder.com/'></option>
-  <option value="2" data-img-src='https://via.placeholder.com/150
+C/O https://placeholder.com/"></option>
+  <option value="2" data-img-src="https://via.placeholder.com/150
 
-C/O https://placeholder.com/'></option>
-  <option value="3" data-img-src='https://via.placeholder.com/150
+C/O https://placeholder.com/"></option>
+  <option value="3" data-img-src="https://via.placeholder.com/150
 
-C/O https://placeholder.com/'></option>
-</select>
+C/O https://placeholder.com/"></option>
+</select><ul class="thumbnails image_picker_selector"><li><div class="thumbnail"><img class="image_picker_image" src="https://via.placeholder.com/150
+
+C/O https://placeholder.com/"></div></li><li><div class="thumbnail"><img class="image_picker_image" src="https://via.placeholder.com/150
+
+C/O https://placeholder.com/"></div></li><li><div class="thumbnail selected"><img class="image_picker_image" src="https://via.placeholder.com/150
+
+C/O https://placeholder.com/"></div></li></ul>
         </div>
 
       </div>
@@ -216,12 +232,17 @@ C/O https://placeholder.com/'></option>
 <p class="label">Sending To</p>
   <input type="phone" id="phone" placeholder="John Doe">
 <p class="label">Link to copy:</p>
-<textarea id="output"></textarea>
+<textarea id="output">https://marketingpip.github.io/Send-A-Card/card?text=https://marketingpip.github.io/Send-A-Card/card?text=JoewrgTgBAtgpgZwQQwOZygCzhOAoIA%3D&amp;name=Q%3D%3D%3D&amp;name=Q%3D%3D%3D&amp;photo=MxA%3D</textarea>
 </div>
-<a href="#" id="invia" target="_blank" title="Condividi su WhatsApp" class="button button--simple button--primary">Preview</a>
+<a href="https://marketingpip.github.io/Send-A-Card/card?text=https://marketingpip.github.io/Send-A-Card/card?text=JoewrgTgBAtgpgZwQQwOZygCzhOAoIA%3D&amp;name=Q%3D%3D%3D&amp;name=Q%3D%3D%3D&amp;photo=MxA%3D" id="invia" target="_blank" title="Condividi su WhatsApp" class="button button--simple button--primary">Preview</a>
  
-  <a href="#" target="_blank"  class="cosmo"><p>🚀</p></a>
+  <a href="#" target="_blank" class="cosmo"><p>🚀</p></a>
 </div>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.1.0/jquery-migrate.min.js"></script>
+
+
+<div class="modal-backdrop in"></div></body></html>
