--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 
-<body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/image-picker/0.3.1/image-picker.min.js"></script></head><body class="">
   
 
 
@@ -185,7 +185,7 @@ ul.thumbnails.image_picker_selector {
   
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#imagePicker" style="width:200px; margin:5px auto;">Choose Card Image</button>
 
-<div class="modal" id="imagePicker">
+<div class="modal" id="imagePicker" style="display: none;">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
@@ -245,4 +245,5 @@ C/O https://placeholder.com/"></div></li></ul>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
 
 <script src="assets/js/card_creator.js"></script>
+
 </body></html>
