--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   
 
 
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/image-picker/0.3.1/image-picker.min.js"></script></head><body class="">
+</head><body class="">
   
 
 
