--- a/index.html
+++ b/index.html
@@ -229,9 +229,7 @@ C/O https://placeholder.com/"></div></li></ul>
 <p class="label">Link to copy:</p>
 <textarea id="output">https://marketingpip.github.io/Send-A-Card/card?text=JoewrgTgBAtgpgZwQQwOZygCzhOAoIA%3D&amp;name=Q%3D%3D%3D</textarea>
 </div>
-<a href="https://marketingpip.github.io/Send-A-Card/card?text=JoewrgTgBAtgpgZwQQwOZygCzhOAoIA%3D&amp;name=Q%3D%3D%3D" id="invia" target="_blank" title="Condividi su WhatsApp" class="button button--simple button--primary">Preview</a>
- 
-  <a href="#" target="_blank" class="cosmo"><p>🚀</p></a>
+<a href="https://marketingpip.github.io/Send-A-Card/card?text=JoewrgTgBAtgpgZwQQwOZygCzhOAoIA%3D&amp;name=Q%3D%3D%3D" id="invia" target="_blank" title="Previe Card" class="button button--simple button--primary">Preview 🚀</a>
 </div>
 
 
@@ -248,23 +246,26 @@ C/O https://placeholder.com/"></div></li></ul>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/image-picker/0.3.1/image-picker.min.js"></script>
 
 
+
   <script type="text/javascript">
     
     
     var picker =   jQuery("select").imagepicker({
-      hide_select:  false,
     });
 
 
 function addPhoto(){
-
-  
+ var res = encodeURIComponent(LZString.compressToBase64($('#input').val()));
+  var phone = encodeURIComponent(LZString.compressToBase64($('#phone').val()));
+  var whatsappApiUrl = 'https://marketingpip.github.io/Send-A-Card/card?text=';
+   res = whatsappApiUrl + res + '&name=' + phone;
   $('#output').text(res + "&photo=" + encodeURIComponent(LZString.compressToBase64(picker.val())));
   $('#invia').attr('href', res);
 }
 
 
   </script>
+
   
 
 </body></html>
