--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ C/O https://placeholder.com/"></div></li></ul>
 <script src="assets/js/card_creator.js"></script>
   
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/image-picker/0.3.1/image-picker.min.js"></script>
 
   <script type="text/javascript">
     
