--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <html lang="en" class=""><head>
 
   <meta charset="UTF-8">
-  <title>Send A Card</title>
+  <title>CodePen Demo</title>
+
+  <meta name="robots" content="noindex">
+
+  <link rel="shortcut icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico">
+  <link rel="mask-icon" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111">
+  <link rel="canonical" href="https://codepen.io/andreabaino/pen/MWWpPBr?editors=1111">
 
   
   
 
+  <style class="INLINE_PEN_STYLESHEET_ID">
+    
+  </style>
 
-</head><body class="">
   
+<script src="https://cpwebassets.codepen.io/assets/editor/iframe/iframeConsoleRunner-7549a40147ccd0ba0a6b5373d87e770e49bb4689f1c2dc30cccc7463f207f997.js"></script>
+<script src="https://cpwebassets.codepen.io/assets/editor/iframe/iframeRefreshCSS-5e03f34e38152f20eb79c96b0b89c2d99c5085e9ae9386dc71e2f0b3c30bf513.js"></script>
+<script src="https://cpwebassets.codepen.io/assets/editor/iframe/iframeRuntimeErrors-4f205f2c14e769b448bcf477de2938c681660d5038bc464e3700256713ebe261.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/image-picker/0.3.1/image-picker.min.js"></script></head>
+
+<body class="" style="">
+  
+<link href="assets/css/style.css" rel="stylesheet">
 
 
 <link href="https://btn.ninja/css/addons.css" rel="stylesheet">
@@ -172,7 +188,12 @@ ul.thumbnails.image_picker_selector {
     ul.thumbnails.image_picker_selector li .thumbnail.selected {
       background: #08C; }
 </style>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
 
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.1.0/jquery-migrate.min.js"></script>
 <div class="cont">
   <h1>SendACard - Card Creator</h1>
 <div class="float-half">
@@ -211,6 +232,12 @@ C/O https://placeholder.com/"></div></li><li><div class="thumbnail"><img class="
 
 C/O https://placeholder.com/"></div></li><li><div class="thumbnail"><img class="image_picker_image" src="https://via.placeholder.com/150
 
+C/O https://placeholder.com/"></div></li></ul><ul class="thumbnails image_picker_selector"><li><div class="thumbnail"><img class="image_picker_image" src="https://via.placeholder.com/150
+
+C/O https://placeholder.com/"></div></li><li><div class="thumbnail"><img class="image_picker_image" src="https://via.placeholder.com/150
+
+C/O https://placeholder.com/"></div></li><li><div class="thumbnail selected"><img class="image_picker_image" src="https://via.placeholder.com/150
+
 C/O https://placeholder.com/"></div></li></ul>
         </div>
 
@@ -227,24 +254,17 @@ C/O https://placeholder.com/"></div></li></ul>
 <p class="label">Sending To</p>
   <input type="phone" id="phone" placeholder="John Doe">
 <p class="label">Link to copy:</p>
-<textarea id="output">https://marketingpip.github.io/Send-A-Card/card?text=JoewrgTgBAtgpgZwQQwOZygCzhOAoIA%3D&amp;name=Q%3D%3D%3D</textarea>
+<textarea id="output">https://marketingpip.github.io/Send-A-Card/card?text=JoewrgTgBAtgpgZwQQwOZygCzhOAoJFFIA%3D%3D&amp;name=M4QyA%3D%3D%3D&amp;photo=MxA%3D</textarea>
 </div>
-<a href="https://marketingpip.github.io/Send-A-Card/card?text=JoewrgTgBAtgpgZwQQwOZygCzhOAoIA%3D&amp;name=Q%3D%3D%3D" id="invia" target="_blank" title="Previe Card" class="button button--simple button--primary">Preview 🚀</a>
+<a href="https://marketingpip.github.io/Send-A-Card/card?text=JoewrgTgBAtgpgZwQQwOZygCzhOAoJFFIA%3D%3D&amp;name=M4QyA%3D%3D%3D&amp;photo=MxA%3D" id="invia" target="_blank" title="Condividi su WhatsApp" class="button button--simple button--primary">Preview</a>
+ 
+  <a href="#" target="_blank" class="cosmo"><p>🚀</p></a>
 </div>
 
 
-
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.1.0/jquery-migrate.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
-
-<script src="assets/js/card_creator.js"></script>
-  
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/image-picker/0.3.1/image-picker.min.js"></script>
+
 
   <script type="text/javascript">
     
@@ -266,5 +286,11 @@ function addPhoto(){
   </script>
 
   
+<script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.1.0/jquery-migrate.min.js"></script>
 
+<script src="assets/js/card_creator.js"></script> 
 </body></html>
+
+  
