--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 
 <link href="https://btn.ninja/css/bootstrap.css" rel="stylesheet">
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.1.0/jquery-migrate.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/image-picker/0.3.1/image-picker.min.js"></script></head>
+
+</head>
 
 <body>
   
@@ -174,12 +173,7 @@ ul.thumbnails.image_picker_selector {
     ul.thumbnails.image_picker_selector li .thumbnail.selected {
       background: #08C; }
 </style>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
 
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.1.0/jquery-migrate.min.js"></script>
 <div class="cont">
   <h1>SendACard - Card Creator</h1>
 <div class="float-half">
@@ -248,7 +242,18 @@ C/O https://placeholder.com/"></div></li></ul>
 </div>
 
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.1.0/jquery-migrate.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/image-picker/0.3.1/image-picker.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+
+
+
+<script src="assets/js/card_creator.js"></script> 
+  
+  
+</body>
 
   <script type="text/javascript">
     
@@ -266,12 +271,6 @@ function addPhoto(){
 
 
   </script>
-
-
-
-<script src="assets/js/card_creator.js"></script> 
-  
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</body></html>
+</html>
 
   
