--- a/index.html
+++ b/index.html
@@ -241,6 +241,8 @@ C/O https://placeholder.com/"></div></li></ul>
   <a href="#" target="_blank" class="cosmo"><p>🚀</p></a>
 </div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.1.0/jquery-migrate.min.js"></script>
