--- a/index.html
+++ b/index.html
@@ -206,19 +206,14 @@ C/O https://placeholder.com/"></option>
   <option value="3" data-img-src="https://via.placeholder.com/150
 
 C/O https://placeholder.com/"></option>
-</select><ul class="thumbnails image_picker_selector"><li><div class="thumbnail"><img class="image_picker_image" src="https://via.placeholder.com/150
+</select><!---<ul class="thumbnails image_picker_selector"><li><div class="thumbnail"><img class="image_picker_image" src="https://via.placeholder.com/150
 
 C/O https://placeholder.com/"></div></li><li><div class="thumbnail"><img class="image_picker_image" src="https://via.placeholder.com/150
 
 C/O https://placeholder.com/"></div></li><li><div class="thumbnail"><img class="image_picker_image" src="https://via.placeholder.com/150
 
-C/O https://placeholder.com/"></div></li></ul><ul class="thumbnails image_picker_selector"><li><div class="thumbnail"><img class="image_picker_image" src="https://via.placeholder.com/150
-
-C/O https://placeholder.com/"></div></li><li><div class="thumbnail"><img class="image_picker_image" src="https://via.placeholder.com/150
-
-C/O https://placeholder.com/"></div></li><li><div class="thumbnail selected"><img class="image_picker_image" src="https://via.placeholder.com/150
-
-C/O https://placeholder.com/"></div></li></ul>
+C/O https://placeholder.com/"></div></li></ul>--->
+          
         </div>
 
       </div>
