--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@ C/O https://placeholder.com/"></div></li></ul>--->
     </div>
   </div>
 </div>
-<p class="label">Sending To</p>
-  <input type="phone" id="phone" placeholder="John Doe">
+<p class="label">Top Of Card</p>
+  <input type="phone" id="phone" placeholder="Happy Birthday John!">
 <p class="label">Link to copy:</p>
 <textarea id="output">https://marketingpip.github.io/Send-A-Card/card?text=JoewrgTgBAtgpgZwQQwOZygCzhOAoJFFIA%3D%3D&amp;name=M4QyA%3D%3D%3D&amp;photo=MxA%3D</textarea>
 </div>
