--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@ ul.thumbnails.image_picker_selector {
     float: left; }
     /* line 35, source/sass/image-picker.scss */
     ul.thumbnails.image_picker_selector li .thumbnail {
+      height:200px;
+      width:200px;
       padding: 6px;
       border: 1px solid #DDD;
       -webkit-user-select: none;
