--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@ ul.thumbnails.image_picker_selector {
           
           <select name="user[avatar]" id="images" style="display: none;">
   <option value="">Please Select</option>
-  <option value="1" data-img-src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png"></option>
-  <option value="2" data-img-src="https://printable-cards.gotfreecards.com/resources/thumbnails/tn-l8qo-216607.jpg"></option>
-  <option value="3" data-img-src="https://images.greetingsisland.com/images/cards/get-well/previews/caring-thoughts_2.png?auto=format,compress&w=440"></option>
-    <option value="4" data-img-src="https://www.homemade-gifts-made-easy.com/image-files/free-printable-christmas-cards-merry-stockings-candy-cane-400x560.png"></option>          
+  <option value="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png" data-img-src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png"></option>
+  <option value="https://printable-cards.gotfreecards.com/resources/thumbnails/tn-l8qo-216607.jpg" data-img-src="https://printable-cards.gotfreecards.com/resources/thumbnails/tn-l8qo-216607.jpg"></option>
+  <option value="https://images.greetingsisland.com/images/cards/get-well/previews/caring-thoughts_2.png?auto=format,compress&w=440" data-img-src="https://images.greetingsisland.com/images/cards/get-well/previews/caring-thoughts_2.png?auto=format,compress&w=440"></option>
+    <option value="https://www.homemade-gifts-made-easy.com/image-files/free-printable-christmas-cards-merry-stockings-candy-cane-400x560.png" data-img-src="https://www.homemade-gifts-made-easy.com/image-files/free-printable-christmas-cards-merry-stockings-candy-cane-400x560.png"></option>          
 </select><!---<ul class="thumbnails image_picker_selector"><li><div class="thumbnail"><img class="image_picker_image" src="https://via.placeholder.com/150
 
 C/O https://placeholder.com/"></div></li><li><div class="thumbnail"><img class="image_picker_image" src="https://via.placeholder.com/150
