--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@ input, textarea {
 
 input[type=checkbox]:checked ~ .tile-checked:after {
   opacity:1; }
+  
 
 /* line 6, source/sass/image-picker.scss */
 ul.thumbnails.image_picker_selector {
@@ -169,8 +170,11 @@ ul.thumbnails.image_picker_selector {
       -moz-user-select: none;
       -ms-user-select: none; }
       /* line 42, source/sass/image-picker.scss */
-      ul.thumbnails.image_picker_selector li .thumbnail img {
-        -webkit-user-drag: none; }
+ul.thumbnails.image_picker_selector li .thumbnail img {
+    -webkit-user-drag: none;
+    height: 188px;
+    width: 200px;
+}
     /* line 48, source/sass/image-picker.scss */
     ul.thumbnails.image_picker_selector li .thumbnail.selected {
       background: #08C; }
@@ -259,8 +263,8 @@ function addPhoto(){
   var phone = encodeURIComponent(LZString.compressToBase64($('#phone').val()));
   var whatsappApiUrl = 'https://marketingpip.github.io/Send-A-Card/card?text=';
    res = whatsappApiUrl + res + '&name=' + phone;
-  $('#output').text(res + "&photo=" + encodeURIComponent(LZString.compressToBase64(picker.val())));
-  $('#invia').attr('href', res);
+  var final = $('#output').text(res + "&photo=" + encodeURIComponent(LZString.compressToBase64(picker.val())));
+  $('#invia').attr('href', final);
 }
 
 
