--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ ul.thumbnails.image_picker_selector li .thumbnail img {
   <h1>SendACard - Card Creator</h1>
 <div class="float-half">
   <p class="label">Message For Card: </p>
-<textarea id="input">Your message here
+<textarea id="input">Just a virtual reminder I love you!
 </textarea>
 </div>
 <div class="float-half">
@@ -242,7 +242,7 @@ C/O https://placeholder.com/"></div></li></ul>--->
   </div>
 </div>
 <p class="label">Top Of Card</p>
-  <input type="phone" id="phone" placeholder="Happy Birthday John!">
+  <input type="phone" id="phone" placeholder="Hey Mom!" value="Hey Mom!">
 <p class="label">Link to copy:</p>
 <textarea id="output">https://marketingpip.github.io/Send-A-Card/card?text=JoewrgTgBAtgpgZwQQwOZygCzhOAoJFFIA%3D%3D&amp;name=M4QyA%3D%3D%3D&amp;photo=MxA%3D</textarea>
 </div>
