--- a/index.html
+++ b/index.html
@@ -184,8 +184,12 @@ ul.thumbnails.image_picker_selector li .thumbnail img {
   <h1>SendACard - Card Creator</h1>
 <div class="float-half">
   <p class="label">Message For Card: </p>
-<textarea id="input">Just a virtual reminder I love you!
+  
+  <textarea id="input"  rows="10" maxlength="280">
+Just a virtual reminder I love you!
 </textarea>
+  <span id="chars"></span>
+
 </div>
 <div class="float-half">
   
