--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ ul.thumbnails.image_picker_selector li .thumbnail img {
 <div class="float-half">
   <p class="label">Message For Card: </p>
   
-  <textarea id="input"  rows="10" maxlength="280">
+  <textarea id="input"  rows="10" maxlength="250">
 Just a virtual reminder I love you!
 </textarea>
   <span id="chars"></span>
@@ -246,7 +246,8 @@ C/O https://placeholder.com/"></div></li></ul>--->
   </div>
 </div>
 <p class="label">Top Of Card</p>
-  <input type="phone" id="phone" placeholder="Hey Mom!" value="Hey Mom!">
+  <input type="phone" id="phone" placeholder="Hey Mom!" value="Hey Mom!"  maxlength="25">
+  <span id="name_chars"></span>
 <p class="label">Link to copy:</p>
 <textarea id="output">https://marketingpip.github.io/Send-A-Card/card?text=JoewrgTgBAtgpgZwQQwOZygCzhOAoJFFIA%3D%3D&amp;name=M4QyA%3D%3D%3D&amp;photo=MxA%3D</textarea>
 </div>
