--- a/index.html
+++ b/index.html
@@ -180,12 +180,12 @@ ul.thumbnails.image_picker_selector li .thumbnail img {
 </style>
 
 <div class="cont">
-  <h1>SendACard - Card Creator</h1>
+  <h1>Send A Card <br> <p> A Virtual Card Creator - Created by <a href="https://github.com/MarketingPipeline">MarketingPipeline</a> ❤ </p></h1>
 <div class="float-half">
   <p class="label">Message For Card: </p>
   
   <textarea id="input"  rows="10" maxlength="250">
-Just a virtual reminder I love you!
+Just a virtual reminder I love you with all my heart! ❤
 </textarea>
   <span id="chars"></span>
 
