--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-<html lang="en" class=""><head>
 
+<html lang="en"><head>
+<!---
+
+Originally Built by github.com/MarketingPipeline
+
+This work is licensed under MIT tho...
+
+This notice may NOT be removed or altered from any source distribution.
+
+---->
   <meta charset="UTF-8">
   <title>Send A Card</title>
 
