--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 
 Originally Built by github.com/MarketingPipeline
 
-This work is licensed under MIT tho...
+This notice CAN removed or altered from any source distribution.
 
-This notice may NOT be removed or altered from any source distribution.
+But we would appreciate if you left it / or gave some credit back to us! 
+
+If you are using this for commerical purposes, a sponsorship or donation would be appreciated towards https://github.com/MarketingPipeline 
+(helps us put more cool stuff out!)  - but again, is NOT required! 
 
 ---->
   <meta charset="UTF-8">
