--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ Just a virtual reminder I love you with all my heart! ❤
 
 
 
-<script src="assets/js/card_creator.js"></script> 
+<script src="assets/js/card_creator.min.js"></script> 
   
   
 </body>
