--- a/card.html
+++ b/card.html
@@ -1,2 +1,2 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
-<script src="assets/js/card_decoder.js"></script>
+<script src="assets/js/card_decoder.min.js"></script>
