--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ ul.thumbnails.image_picker_selector li .thumbnail img {
 </style>
 
 <div class="cont">
-  <h1>Send A Card <br> <p> A Virtual Card Creator - Created by <a href="https://github.com/MarketingPipeline">MarketingPipeline</a> ❤ </p></h1>
+  <h1>Send A Card <br> <p> A free eCard Creator - Created by <a href="https://github.com/MarketingPipeline">MarketingPipeline</a> ❤ </p></h1>
 <div class="float-half">
   <p class="label">Message For Card: </p>
   
