--- a/index.html
+++ b/index.html
@@ -192,12 +192,13 @@ ul.thumbnails.image_picker_selector li .thumbnail img {
 </style>
 
 <div class="cont">
-  <h1>Send A Card <br> <p> A free eCard Creator - Created by <a href="https://github.com/MarketingPipeline">MarketingPipeline</a> ❤ </p></h1>
+  <h1>Send A Card <br> <p> A free eCard creator - created by <a href="https://github.com/MarketingPipeline">MarketingPipeline</a> ❤ </p></h1>
 <div class="float-half">
   <p class="label">Message For Card: </p>
   
   <textarea id="input"  rows="10" maxlength="250">
-Just a virtual reminder I love you with all my heart! ❤
+Just a virtual reminder that I love you with all my heart! 
+From Jared ❤ 
 </textarea>
   <span id="chars"></span>
 
