--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ From Jared ❤
         <div class="wall">
           
           <select name="user[avatar]" id="images" style="display: none;">
-  <option value="">Please Select</option>
+  <option value="https://static.vecteezy.com/system/resources/previews/005/610/650/original/love-you-mom-motivatonal-quote-for-mothers-day-hand-calligraphy-lettering-script-template-for-postcard-greeting-card-t-shirt-print-poster-banner-isolated-black-color-phrase-vector.jpg">Please Select</option>
             
   <option value="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png" data-img-src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png"></option>
   <option value="https://printable-cards.gotfreecards.com/resources/thumbnails/tn-l8qo-216607.jpg" data-img-src="https://printable-cards.gotfreecards.com/resources/thumbnails/tn-l8qo-216607.jpg"></option>
