--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ From Jared ❤
 </div>
 <div class="float-half">
   
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#imagePicker" style="width:200px; margin:5px auto;">Choose Card Image</button>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#imagePicker" style="width:200px; margin:5px auto;">Choose Card Front Image</button>
 
 <div class="modal" id="imagePicker" style="display: none;">
   <div class="modal-dialog modal-lg">
@@ -243,7 +243,7 @@ From Jared ❤
       </div>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="addPhoto();">Add Images</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="addPhoto();">Set Image Cover</button>
         <button type="button" class="btn btn-cancel" data-dismiss="modal">Cancel</button>
       </div>
       
