--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 
 <html lang="en"><head>
+  
+  <link rel="icon" type="image/png" href="https://static.thenounproject.com/png/555763-200.png"/>
 <!---
 
 Originally Built by github.com/MarketingPipeline
