--- a/card.html
+++ b/card.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <title>You recieved a eCard!</title>
             <meta name="title" content="You Received A Card">
-          <meta name="description" content=>
+         <meta name="description" content="Open your eCard!">
 
           <!-- Twitter -->
           <meta property="twitter:title" content="You Received A Card">
