--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@ From Jared ❤
 <textarea id="output">https://marketingpip.github.io/Send-A-Card/card?text=JoewrgTgBAtgpgZwQQwOZygCzhOAoJFFIA%3D%3D&amp;name=M4QyA%3D%3D%3D&amp;photo=MxA%3D</textarea>
 </div>
 <a href="https://marketingpip.github.io/Send-A-Card/card?text=JoewrgTgBAtgpgZwQQwOZygCzhOAoJFFIA%3D%3D&amp;name=M4QyA%3D%3D%3D&amp;photo=MxA%3D" id="invia" target="_blank" title="Preview Card In New Tab" class="button button--simple button--primary">Preview 🚀</a>
- 
+ <br><br><br>
+  <p> Images used may be subject to copyright by their original owners.</p>
 
 </div>
 
