--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@ ul.thumbnails.image_picker_selector li .thumbnail img {
 <div class="float-half">
   <p class="label">Message For Card: </p>
   
-  <textarea id="input"  rows="10" maxlength="250">
-Just a virtual reminder that I love you with all my heart! 
-From Jared ❤ 
+  <textarea id="input"  rows="10" maxlength="250" placeholder="Just a virtual reminder that I love you with all my heart! 
+From Jared ❤">
+
 </textarea>
   <span id="chars"></span>
 
@@ -270,9 +270,9 @@ From Jared ❤
   </div>
 </div>
 <p class="label">Top Of Card</p>
-  <input type="phone" id="phone" placeholder="Hey Mom!" value="Hey Mom!"  maxlength="25">
+  <input type="phone" id="phone" placeholder="Hey Mom!"  maxlength="25">
   <span id="name_chars"></span>
-<p class="label">Link to copy:</p>
+  <p class="label"><b>Copy this link below to share your card</b>:</p>
 <textarea id="output">https://marketingpip.github.io/Send-A-Card/card?text=JoewrgTgBAtgpgZwQQwOZygCzhOAoJFFIA%3D%3D&amp;name=M4QyA%3D%3D%3D&amp;photo=MxA%3D</textarea>
 </div>
 <a href="https://marketingpip.github.io/Send-A-Card/card?text=JoewrgTgBAtgpgZwQQwOZygCzhOAoJFFIA%3D%3D&amp;name=M4QyA%3D%3D%3D&amp;photo=MxA%3D" id="invia" target="_blank" title="Preview Card In New Tab" class="button button--simple button--primary">Preview 🚀</a>
