--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ From Jared ❤">
       </div>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="addPhoto();">Set Image Cover</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="addPhoto();">Set Card Image</button>
         <button type="button" class="btn btn-cancel" data-dismiss="modal">Cancel</button>
       </div>
       
@@ -275,7 +275,10 @@ From Jared ❤">
   <p class="label"><b>Copy this link below to share your card</b>:</p>
 <textarea id="output">https://marketingpip.github.io/Send-A-Card/card?text=JoewrgTgBAtgpgZwQQwOZygCzhOAoJFFIA%3D%3D&amp;name=M4QyA%3D%3D%3D&amp;photo=MxA%3D</textarea>
 </div>
-<a href="https://marketingpip.github.io/Send-A-Card/card?text=JoewrgTgBAtgpgZwQQwOZygCzhOAoJFFIA%3D%3D&amp;name=M4QyA%3D%3D%3D&amp;photo=MxA%3D" id="invia" target="_blank" title="Preview Card In New Tab" class="button button--simple button--primary">Preview 🚀</a>
+<p id="copiedTxtNotify"></p>  
+<a href="https://marketingpip.github.io/Send-A-Card/card?text=JoewrgTgBAtgpgZwQQwOZygCzhOAoJFFIA%3D%3D&amp;name=M4QyA%3D%3D%3D&amp;photo=MxA%3D&preview" id="invia" target="_blank" title="Preview Card In New Tab" class="button button--simple button--primary">Preview 🚀</a>
+<a onclick="copyURL()" title="Copy Card Link" class="button button--simple button--primary">Copy Link</a>  
+  
  <br><br><br>
   <p> Images used may be subject to copyright by their original owners.</p>
 
