--- a/index.html
+++ b/index.html
@@ -215,10 +215,7 @@ ul.thumbnails.image_picker_selector li .thumbnail img {
 <div class="float-half">
   <p class="label">Message For Card: </p>
   
-  <textarea id="input"  rows="10" maxlength="250" placeholder="Just a virtual reminder that I love you with all my heart! 
-From Jared ❤">
-
-</textarea>
+  <textarea id="input"  rows="10" maxlength="250" placeholder="Just a virtual reminder that I love you with all my heart! From Jared ❤"></textarea>
   <span id="chars"></span>
 
 </div>
@@ -270,7 +267,7 @@ From Jared ❤">
   </div>
 </div>
 <p class="label">Top Of Card</p>
-  <input type="phone" id="phone" placeholder="Hey Mom!"  maxlength="25">
+  <input type="phone" id="phone" placeholder="Hey Mom!" maxlength="25">
   <span id="name_chars"></span>
   <p class="label"><b>Copy this link below to share your card</b>:</p>
 <textarea id="output">https://marketingpip.github.io/Send-A-Card/card?text=JoewrgTgBAtgpgZwQQwOZygCzhOAoJFFIA%3D%3D&amp;name=M4QyA%3D%3D%3D&amp;photo=MxA%3D</textarea>
