--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@ If you are using this for commerical purposes, a sponsorship or donation would b
   <meta charset="UTF-8">
   <title>Send A Card</title>
   
-            <meta name="title" content="Send a Free eCard">
+            <meta name="title" content="Send A Card: Send Free Ecards & Greeting Cards">
           <meta name="description" content="Customize and send a virtual greeting card!">
 
           <!-- Twitter -->
-          <meta property="twitter:title" content="Send a Free eCard">
+          <meta property="twitter:title" content="Send Free eCards / Greeting Cards">
           <meta property="twitter:description" content="Customize and send a virtual greeting card!">
           <meta property="twitter:image" content="https://user-images.githubusercontent.com/86180097/189341520-c06cfe40-15df-4de8-86d2-05d9bcaf1d0b.png">
           <meta property="twitter:url" content="https://marketingpipeline.github.io/Send-A-Card/">
           <meta property="twitter:card" content="summary_large_image">
 
           <!-- Facebook -->
-          <meta property="og:title" content="Send a Free eCard">
+          <meta property="og:title" content="Send Free eCards / Greeting Cards">
           <meta property="og:description" content="Customize and send a virtual greeting card!">
                     <meta property="og:image" content="https://user-images.githubusercontent.com/86180097/189341520-c06cfe40-15df-4de8-86d2-05d9bcaf1d0b.png">
           <meta property="og:url" content="https://marketingpipeline.github.io/Send-A-Card/">
