--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ If you are using this for commerical purposes, a sponsorship or donation would b
 
 ---->
   <meta charset="UTF-8">
-  <title>Send A Card</title>
+  <title>Send A Card: Send Free Ecards & Greeting Cards</title>
   
             <meta name="title" content="Send A Card: Send Free Ecards & Greeting Cards">
           <meta name="description" content="Customize and send a virtual greeting card!">
