--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@ If you are using this for commerical purposes, a sponsorship or donation would b
           <meta name="description" content="Customize and send a virtual greeting card!">
 
           <!-- Twitter -->
-          <meta property="twitter:title" content="Send Free eCards / Greeting Cards">
+          <meta property="twitter:title" content="Send Free ECards / Greeting Cards">
           <meta property="twitter:description" content="Customize and send a virtual greeting card!">
           <meta property="twitter:image" content="https://user-images.githubusercontent.com/86180097/189341520-c06cfe40-15df-4de8-86d2-05d9bcaf1d0b.png">
           <meta property="twitter:url" content="https://marketingpipeline.github.io/Send-A-Card/">
           <meta property="twitter:card" content="summary_large_image">
 
           <!-- Facebook -->
-          <meta property="og:title" content="Send Free eCards / Greeting Cards">
+          <meta property="og:title" content="Send Free ECards / Greeting Cards">
           <meta property="og:description" content="Customize and send a virtual greeting card!">
                     <meta property="og:image" content="https://user-images.githubusercontent.com/86180097/189341520-c06cfe40-15df-4de8-86d2-05d9bcaf1d0b.png">
           <meta property="og:url" content="https://marketingpipeline.github.io/Send-A-Card/">
