--- a/card.html
+++ b/card.html
@@ -19,6 +19,6 @@
           <meta property="og:url" content="https://marketingpipeline.github.io/Send-A-Card/">
           <meta property="og:type" content="website">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
-<script src="assets/js/card_decoder.min.js"></script>
+<script src="assets/js/card_decoder.js"></script>
 
 </head>
